  was passed before passing other conditions then the top-level conditions
  would be OR'ed together instead of AND'ed
- Fixed issues with Date (without time, ie java.sql.Date) parsing and
  formatting due to weirdness with time zone and truncating the time part
  of the Date representation in long millis since epoch; see comments in
  L10nFacadeImpl.groovy for more details


===========================================================================
Release 1.5.0 - 07 Mar 2015
===========================================================================

Moqui Framework 1.5.0 is a major new feature and bug fix release.

This release includes a number of UI improvements in XML Screens and Forms
including lazy-loading trees (with jstree), more complete database-driven
forms, general form response saving (together support DB-driven surveys,
and can also be used with any XML Form), ability to include entire screen
sections in other screens, required screen parameters so explicit checking
isn't necessary (most screens with parameters need this), significant style
improvements based on updated Metis (and Bootstrap, jquery, etc), a new
dark/light style switcher, and restored use of screen themes to load CSS,
JS, images, inserted text and templates, and much more.

One major new feature in this release is EntitySync which duplicates data
between systems based on update timestamps. This can move data between
tenants, systems on different networks and used for different purposes, and
so on. Another major feature is the system-system messaging that is a store
and forward message queue, or in other words it persists outgoing messages
to allow retry in sending or even modify and retry, and incoming messages
to allow retry in processing, modify and retry, etc. This can be used along
with or instead of a lower-level message queue to provide more visibility
at a business level and to facilitate production support for messages with